# cpp-snake-game

./: .gitignore  CMakeLists.txt
src/: CollisionHandler.cpp  CollisionHandler.h  Game.h  app.cpp  game.cpp
